# l0-stream-sampler

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: CsvReader.hpp  ExactSupportTracker.hpp  HashBasedL0Sampler.hpp  HashFunction.hpp  HashUtils.hpp  KWisePolynomialHash.hpp  L0Sampler.hpp  OneSparseSketch.hpp  PairwiseHash.hpp  SSparseSketch.hpp  SamplerConfig.hpp  SamplerStatus.hpp  SplitMix64Hash.hpp  StreamUpdate.hpp
cpp/src/: CsvReader.cpp  ExactSupportTracker.cpp  HashBasedL0Sampler.cpp  KWisePolynomialHash.cpp  L0Sampler.cpp  OneSparseSketch.cpp  PairwiseHash.cpp  SSparseSketch.cpp  SplitMix64Hash.cpp  main.cpp
cpp/tests/: test_hash_based.cpp  test_k_wise_polynomial_hash.cpp  test_l0_sampler.cpp  test_one_sparse.cpp  test_pairwise_hash.cpp  test_s_sparse.cpp  test_sampler_config.cpp  test_splitmix64_hash.cpp
data/processed/: README.md
data/raw/: README.md
data/synthetic/: empty_support.csv  empty_support.frequencies.csv  multi_support_100.csv  multi_support_100.frequencies.csv  multi_support_100.metadata.json  multi_support_100.support.csv  multi_tiny.csv  multi_tiny.frequencies.csv  multi_tiny.metadata.json  multi_tiny.support.csv  tiny_01.csv  tiny_01.support.csv
experiments/: README.md
experiments/configs/: README.md
results/: README.md  validation_summary.csv
scripts/: generate_synthetic.py  read_lobster_sample.py  run_recovery_comparison.py  run_uniformity_experiments.py  validate_synthetic.py
tests/: test_synthetic_generation.py  test_validation.py
